# simple-meeting-transciber

./: .gitignore  .replit  README.md  main.py  pyproject.toml  requirements.txt  utils.py
output/: 2025-01-17 11-48-01_output.md  Screen_Recording_2024-09-19_211415_output.md  Screen_Recording_2025-01-17_211306_output.md
